Downported to Java 11