@@ -81,7 +81,7 @@ public class TileMap {
 	}
 
 	private void throwOutOfBounds(int row, int col) {
-		throw new IndexOutOfBoundsException(
-				"Coordinate (%d, %d) is outside of map bounds (%d rows, %d cols)".formatted(row, col, numRows(), numCols()));
+		throw new IndexOutOfBoundsException(String.format("Coordinate (%d, %d) is outside of map bounds (%d rows, %d cols)",
+				row, col, numRows(), numCols()));
 	}
 }
