@@ -57,7 +57,7 @@ public class TickTimer {
 	}
 
 	public static String ticksToString(long ticks) {
-		return ticks == INDEFINITE ? "indefinite" : "%d".formatted(ticks);
+		return ticks == INDEFINITE ? "indefinite" : "" + ticks;
 	}
 
 	private final String name;
@@ -92,7 +92,7 @@ public class TickTimer {
 
 	@Override
 	public String toString() {
-		return "[%s %s tick: %s remaining: %s total: %s]".formatted(name, state, ticksToString(tick),
+		return String.format("[%s %s tick: %s remaining: %s total: %s]", name, state, ticksToString(tick),
 				ticksToString(remaining()), ticksToString(duration));
 	}
 
@@ -139,16 +139,19 @@ public class TickTimer {
 	 */
 	public void start() {
 		switch (state) {
-		case RUNNING -> {
+		case RUNNING: {
 			Logger.trace("Timer {} not started, already running", this);
+			break;
 		}
-		case EXPIRED -> {
+		case EXPIRED: {
 			Logger.trace("Timer {} not started, has expired", this);
+			break;
 		}
-		default -> {
+		default: {
 			state = RUNNING;
 			Logger.trace("{} started", this);
 			fireEvent(new TickTimerEvent(Type.STARTED));
+			break;
 		}
 		}
 	}
@@ -176,21 +179,26 @@ public class TickTimer {
 	 */
 	public void stop() {
 		switch (state) {
-		case RUNNING -> {
+		case RUNNING: {
 			state = STOPPED;
 			Logger.trace("{} stopped", this);
 			fireEvent(new TickTimerEvent(Type.STOPPED));
+			break;
 		}
-		case STOPPED -> {
+		case STOPPED: {
 			Logger.trace("{} already stopped", this);
+			break;
 		}
-		case READY -> {
+		case READY: {
 			Logger.trace("{} not stopped, was not running", this);
+			break;
 		}
-		case EXPIRED -> {
+		case EXPIRED: {
 			Logger.trace("{} not stopped, has expired", this);
+			break;
 		}
-		default -> throw new IllegalArgumentException("Unexpected value: " + state);
+		default:
+			throw new IllegalArgumentException("Unexpected value: " + state);
 		}
 	}
 
