@@ -6,6 +6,6 @@ package de.amr.games.pacman.model;
 public class IllegalGameVariantException extends IllegalArgumentException {
 
 	public IllegalGameVariantException(GameVariant variant) {
-		super("Illegal game variant value '%s'".formatted(variant));
+		super(String.format("Illegal game variant value '%s'", variant));
 	}
 }
