@@ -6,6 +6,6 @@ package de.amr.games.pacman.model;
 public class IllegalLevelNumberException extends IllegalArgumentException {
 
 	public IllegalLevelNumberException(int number) {
-		super("Illegal level number '%d' (Allowed values: 1-)".formatted(number));
+		super(String.format("Illegal level number '%d' (Allowed values: 1-)", number));
 	}
 }
