@@ -56,7 +56,7 @@ public class MovingBonus extends Creature implements Bonus {
 	private final RouteBasedSteering steering = new RouteBasedSteering();
 
 	public MovingBonus(byte symbol) {
-		super("MovingBonus-%d".formatted(symbol));
+		super(String.format("MovingBonus-%d", symbol));
 		super.reset(); // TODO check this
 
 		this.symbol = symbol;
@@ -81,7 +81,7 @@ public class MovingBonus extends Creature implements Bonus {
 
 	@Override
 	public String toString() {
-		return "[MovingBonus state=%s symbol=%d value=%d timer=%d tile=%s]".formatted(state, symbol(), points(), timer,
+		return String.format("[MovingBonus state=%s symbol=%d value=%d timer=%d tile=%s]", state, symbol(), points(), timer,
 				tile());
 	}
 
@@ -139,9 +139,10 @@ public class MovingBonus extends Creature implements Bonus {
 	@Override
 	public void update(GameLevel level) {
 		switch (state) {
-		case STATE_INACTIVE -> { // nothing to do
-		}
-		case STATE_EDIBLE -> {
+		case STATE_INACTIVE:
+			// nothing to do
+			break;
+		case STATE_EDIBLE: {
 			if (sameTile(level.pac())) {
 				level.game().scorePoints(points());
 				eat();
@@ -157,15 +158,18 @@ public class MovingBonus extends Creature implements Bonus {
 			navigateTowardsTarget(level);
 			tryMoving(level);
 			jumpAnimation.animate();
+			break;
 		}
-		case STATE_EATEN -> {
+		case STATE_EATEN: {
 			if (--timer == 0) {
 				setInactive();
 				Logger.trace("Bonus expired: {}", this);
 				publishGameEvent(GameEventType.BONUS_EXPIRES, tile());
 			}
+			break;
 		}
-		default -> throw new IllegalStateException();
+		default:
+			throw new IllegalStateException();
 		}
 	}
 }
