@@ -56,8 +56,8 @@ public class StaticBonus extends Entity implements Bonus {
 
 	@Override
 	public String toString() {
-		return "[StaticBonus symbol=%d value=%d state=%s position=%s timer=%d]".formatted(symbol, points(), state, position,
-				timer);
+		return String.format("[StaticBonus symbol=%d value=%d state=%s position=%s timer=%d]", symbol, points(), state,
+				position, timer);
 	}
 
 	@Override
@@ -110,10 +110,11 @@ public class StaticBonus extends Entity implements Bonus {
 	@Override
 	public void update(GameLevel level) {
 		switch (state) {
-		case Bonus.STATE_INACTIVE -> {
+		case Bonus.STATE_INACTIVE: {
 			// stay inactive
+			break;
 		}
-		case Bonus.STATE_EDIBLE -> {
+		case Bonus.STATE_EDIBLE: {
 			if (sameTile(level.pac())) {
 				level.game().scorePoints(points());
 				eat();
@@ -122,15 +123,18 @@ public class StaticBonus extends Entity implements Bonus {
 			} else {
 				--timer;
 			}
+			break;
 		}
-		case Bonus.STATE_EATEN -> {
+		case Bonus.STATE_EATEN: {
 			if (timer == 0) {
 				expire();
 			} else {
 				--timer;
 			}
+			break;
 		}
-		default -> throw new IllegalStateException();
+		default:
+			throw new IllegalStateException();
 		}
 	}
 }
